fixed close icon issue on smaller viewports

--- a/css/style.scss
+++ b/css/style.scss
@@ -130,7 +130,7 @@ p {
 // navigation bar
 header {
   padding: 30px;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
 }
 
